fix PRODUCTS being blocked on mobiles and add mockup to README.md

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -283,10 +283,10 @@ input[name='q']::placeholder {
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 116px;
+        padding-top: 126px;
     }
 
     body {
-        height: calc(100vh - 116px);
+        height: calc(100vh - 126px);
     }
 }
